# SGL

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  main.cpp
SGL/: SGL.hpp  SGL_Defaults.hpp  SGL_Funcs.cpp  SGL_Make.hpp
SGL/SGL_Builtins/: SGL_Funcs.cpp  SGL_Structs.hpp
SGL/SGL_Button/: SGL_Button.cpp  SGL_Button.hpp
SGL/SGL_Clock/: SGL_Clock.cpp  SGL_Clock.hpp
SGL/SGL_EventHandler/: SGL_EventHandler.cpp  SGL_EventHandler.hpp
SGL/SGL_Font/: SGL_Font.cpp  SGL_Font.hpp
SGL/SGL_Label/: SGL_Label.cpp  SGL_Label.hpp
SGL/SGL_Parent/: SGL_Parent.cpp  SGL_Parent.hpp
SGL/SGL_ParentType/: SGL_ParentType.cpp  SGL_ParentType.hpp
SGL/SGL_Root/: SGL_Root.cpp  SGL_Root.hpp
SGL/SGL_StackPanel/: SGL_StackPanel.cpp  SGL_StackPanel.hpp
SGL/SGL_Text/: SGL_Text.cpp  SGL_Text.hpp
SGL/SGL_Widget/: SGL_Widget.cpp  SGL_Widget.hpp
SGL/SGL_Window/: SGL_Window.cpp  SGL_Window.hpp
